(lang dune 3.12)

(name aoc_2023)

(generate_opam_files true)

(source
 (github MichaelVrana/AoC-2023))

(authors "Michael Vrána")

(package
 (name aoc_2023)
 (depends ocaml dune)
 (tags
  ("Advent of Code 2023")))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
